[tool.poetry]
name = "unittest-proj"
version = "0.1.0"
description = ""
authors = ["Sergey <smirsand@mail.ru>"]
readme = "README.md"
packages = [{include = "unittest_proj"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
